# reactor

./: .gitignore  MIT LICENSE  README
OGL/: .gitignore  CMakeLists.txt  Reactor.2008.sln  Reactor.2008.vcproj  Reactor.sln  Reactor.vcxproj  ReactorDLL.2008.vcproj  ReactorDLL.vcxproj  ReactorTarget.xcconfig  build  configure
OGL/Reactor.xcodeproj/: greiser.mode1v3  greiser.pbxuser  project.pbxproj
OGL/Reactor.xcodeproj/project.xcworkspace/xcuserdata/greiser.xcuserdatad/: UserInterfaceState.xcuserstate
OGL/Reactor.xcodeproj/xcuserdata/greiser.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
OGL/Reactor.xcodeproj/xcuserdata/greiser.xcuserdatad/xcschemes/: Reactor.xcscheme  xcschememanagement.plist
OGL/cmake/: Config.cmake
OGL/code/headers/: RCamera.h  REngine.h  RGame.h  RInput.h  RMathUtils.h  RNode.h  RScene.h  collection.h  common.h  reactor.h  rtypes.h  singleton.hpp
OGL/code/headers/types/: RMatrix.h  RQuaternion.h  RVector2.h  RVector3.h  RVector4.h
OGL/code/src/: RCamera.cpp  REngine.cpp  RGame.cpp  RInput.cpp  RMathUtils.cpp  RNode.cpp
OGL/dependencies/GLTools/: GLTools_VS2010.sln  GLTools_VS2010.vcxproj
OGL/dependencies/GLTools/include/: GLTools.h
OGL/dependencies/GLTools/include/GL/: glew.h  wglew.h
OGL/dependencies/GLTools/libGLTools/libGLTools/: libGLToolsTarget.xcconfig
OGL/dependencies/GLTools/libGLTools/libGLTools.xcodeproj/: project.pbxproj
OGL/dependencies/GLTools/libGLTools/libGLTools.xcodeproj/xcuserdata/greiser.xcuserdatad/xcschemes/: libGLTools.xcscheme  xcschememanagement.plist
OGL/dependencies/freeglut/win32/include/: freeglut_std.h
OGL/test/ReactorTest.xcworkspace/: contents.xcworkspacedata
OGL/test/ReactorTest.xcworkspace/xcuserdata/greiser.xcuserdatad/: UserInterfaceState.xcuserstate
OGL/test/ReactorTest/ReactorTest/: MyGame.cpp  MyGame.h  ReactorTest-Info.plist  ReactorTest-Prefix.pch  ReactorTestAppDelegate.h  ReactorTestAppDelegate.m  ReactorTestAppDelegate.mpp  main.cpp  main.m
OGL/test/ReactorTest/ReactorTest.xcodeproj/: project.pbxproj
OGL/test/ReactorTest/ReactorTest.xcodeproj/xcuserdata/greiser.xcuserdatad/xcschemes/: ReactorTest.xcscheme  xcschememanagement.plist
OGL/test/ReactorTest/ReactorTest/ReactorTest.xcdatamodeld/: .xccurrentversion
OGL/test/ReactorTest/ReactorTest/en.lproj/: MainMenu.xib
OGL/test/ReactorTest/ReactorTestTests/: ReactorTestTests-Info.plist  ReactorTestTests-Prefix.pch  ReactorTestTests.h  ReactorTestTests.m
XNA/: Reactor3D.sln
XNA/Reactor3D/: Actor.cs  Actor.xnb  Atmosphere.cs  Billboard.xnb  BloomCombine.xnb  BloomExtract.xnb  Camera.cs  Engine.cs  Game.cs  GaussianBlur.xnb  Grass.xnb  Grass1.xnb  Input.cs  Landscape.cs  Landscape.xnb  Lighting.cs  LobbyCube.xnb  Mesh.cs  ParticleSystem.cs  ParticleSystem.xnb  Paths.cs  Physics.cs  RGraphicEffect.cs  RVideoManager.cs  Reactor3D.csproj  RenderSurface.cs  Resource1.Designer.cs  Resource1.resx  Resources.Designer.cs  Resources.resx  Scene.cs  Screen2d.cs  Shader.cs  SkyCube.xnb  Skybox.xnb  Sound.cs  Tahoma.xnb  TahomaWinFont.xnb  TextureFactory.cs  Types.cs  (+5 more)
XNA/Reactor3D/Content/: Actor.fx  Content.contentproj  Grass.fx  Landscape.fx  ParticleSystem.fx  Skybox.fx  Water.fx
XNA/Reactor3D/Properties/: AssemblyInfo.cs
XNA/Reactor3D/Resources/: Actor.dx11.mgfxo  Billboard.ogl.mgfxo  BloomCombine.dx11.mgfxo  BloomCombine.ogl.mgfxo  Landscape.dx11.mgfxo  Landscape.ogl.mgfxo  ParticleSystem.dx11.mgfxo  ParticleSystem.ogl.mgfxo  Skybox.dx11.mgfxo  Water.dx11.mgfxo
XNA/ReactorContent/: ContentTypes.cs  ReactorContent.csproj  Xbox 360 Copy of ReactorContent.csproj
XNA/ReactorContent/Content/: Content.contentproj
XNA/ReactorContent/Properties/: AssemblyInfo.cs
XNA/ReactorContentImporter/: ActorProcessor.cs  AnimationData.cs  ModelData.cs  ReactorContentImporter.csproj  Xbox 360 Copy of ReactorContentImporter.csproj
XNA/ReactorContentImporter/Content/: Content.contentproj
XNA/ReactorContentImporter/Properties/: AssemblyInfo.cs
XNA/ReactorMono/: Reactor.csproj  ReactorMono.sln
XNA/ReactorMono/Properties/: AssemblyInfo.cs
XNA/ReactorMono/ReactorMonoContent/: ReactorContent.csproj
XNA/ReactorMono/ReactorMonoContent/Properties/: AssemblyInfo.cs
XNA/ReactorMono/ReactorMonoContentImporter/: ReactorContentImporter.csproj
XNA/ReactorMono/ReactorMonoContentImporter/Properties/: AssemblyInfo.cs
XNA/WinGame/: Game1.cs  Program.cs  WinGame.csproj  Xbox 360 Copy of WinGame.csproj
XNA/WinGame/Content/: Content.contentproj  Font1.spritefont  Mesh.fx  nl_datamap.dds  nl_heightmap.dds  skybox001.dds
XNA/WinGame/Content/Textures/: rock.tga  rockNormal.dds  rockNormal.tga
XNA/WinGame/Properties/: AssemblyInfo.cs
XNA/assets/: Actor.fx  Billboard.fx  Grass.fx  Grass1.fx  Landscape.fx  ParticleSystem.fx  SkyCube.dds  Skybox.fx  Star.fx  Tahoma.spritefont  Water.fx  bigmapNormal.tga  box.fbx  sky1.dds  snowNormal.dds  stars.tga
effects/: BuildEffects.bat
effects/output/: Actor.ogl.mgfxo  Billboard.dx11.mgfxo  BloomExtract.dx11.mgfxo  BloomExtract.ogl.mgfxo  GaussianBlur.dx11.mgfxo  GaussianBlur.ogl.mgfxo  Skybox.ogl.mgfxo  Water.ogl.mgfxo
effects/source/: Actor.fx  Billboard.fx  BloomCombine.fx  BloomExtract.fx  GaussianBlur.fx  Grass.fx  Landscape.fx  ParticleSystem.fx  Skybox.fx  Water.fx
